# host-coding-agent-mcp

./: .gitignore  IMPLEMENTATION_STATUS.md  README.md  config.yaml  pyproject.toml  server.py
docs/: AGENT_ROUTING.md  ARCHITECTURE.md  DEVELOPMENT_ENFORCEMENT.md  EXECUTION_RELIABILITY_PLAN.md  README.md  SKILL_INSTALLATION.md
hermes_plugins/development-policy/: SOUL_APPEND.md  __init__.py  plugin.yaml  policy.py
host_coding_agent/: __init__.py  applier.py  approval_cli.py  approvals.py  artifacts.py  auth.py  automated_delivery.py  config.py  delivery.py  direct_safety.py  health.py  jobs.py  models.py  process_control.py  profiles.py  progress.py  proposals.py  routing.py  runner.py  runtime.py  security.py  task_classification.py  testing.py  worktrees.py
scripts/: check.sh  generate-token.sh  install-hermes-policy.sh  install-hermes-skill.sh  install-launchd.sh  install-openclaw-skill.sh  launchd.plist.template  start.sh
tests/: conftest.py  test_agent_routing.py  test_allowed_roots.py  test_applier.py  test_approval_cli.py  test_approval_endpoint.py  test_approvals.py  test_artifacts.py  test_automated_delivery.py  test_development_policy.py  test_direct_safety.py  test_execution_health.py  test_health_endpoints.py  test_jobs.py  test_manual_delivery.py  test_policy.py  test_process_control.py  test_profiles.py  test_runner.py  test_runtime.py  test_server_artifacts.py  test_server_async_jobs.py  test_server_development_jobs.py  test_task_classification.py  test_worktree_proposals.py  test_worktree_testing.py  test_worktrees.py
(+1 files in other folders)
